--- a/neural-style-docker/Dockerfile
+++ b/neural-style-docker/Dockerfile
@@ -10,6 +10,7 @@ RUN set -ex && \
 	protobuf-compiler \
 	wget \
 	git \
+	python-pip \
 	&& apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 # Install Azure Dependencies
