--- a/console-client/src/NeuralStyle.ConsoleClient/NeuralStyle.ConsoleClient.csproj
+++ b/console-client/src/NeuralStyle.ConsoleClient/NeuralStyle.ConsoleClient.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.ValueTuple" Version="4.4.0" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.1.1" />
   </ItemGroup>
 
