removed -r in pip install

--- a/neural-style-docker/Dockerfile
+++ b/neural-style-docker/Dockerfile
@@ -61,7 +61,7 @@ WORKDIR /app/fast-neural-style
 RUN wget --progress=bar:force --output-document=vgg16.t7 https://cs.stanford.edu/people/jcjohns/fast-neural-style/models/vgg16.t7  
 
 #Install Python requirements for training (in requirements.txt)
-RUN pip install -r h5py==2.6.0 && pip install -r numpy==1.11.1 && pip install -r Pillow==3.3.1 && pip install -r scipy==0.18.0 && pip install -r six==1.10.0
+RUN pip install h5py==2.6.0 && pip install numpy==1.11.1 && pip install Pillow==3.3.1 && pip install scipy==0.18.0 && pip install six==1.10.0
 
 # Add neural-style to path
 ENV PATH /app/neural-style:$PATH
