--- a/neural-style-docker/Dockerfile
+++ b/neural-style-docker/Dockerfile
@@ -30,17 +30,16 @@ ENV PATH="${MINICONDA_HOME}/bin:${PATH}"
 RUN curl -o Miniconda3-latest-Linux-x86_64.sh https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh \
   && chmod +x Miniconda3-latest-Linux-x86_64.sh \
   && ./Miniconda3-latest-Linux-x86_64.sh -b -p "${MINICONDA_HOME}" \
-&& rm Miniconda3-latest-Linux-x86_64.sh
+  && rm Miniconda3-latest-Linux-x86_64.sh
 COPY conda.txt conda.txt
-RUN conda install -y --file=conda.txt
+RUN conda install -y numpy
 RUN conda clean -y -i -l -p -t && rm -f conda.txt
-COPY pip.txt pip.txt
-RUN pip install -r pip.txt && rm -f pip.txt
+RUN pip install gputil
 
 # Install fast-neural-style train dependencies
 RUN set -ex && \
 	apt-get install --no-install-recommends --no-install-suggests -y \
-	python2.7-dev \
+#	python2.7-dev \
 	libhdf5-dev
 	
 # install hdf5 for fast neural style training
@@ -61,7 +60,7 @@ WORKDIR /app/fast-neural-style
 RUN wget --progress=bar:force --output-document=vgg16.t7 https://cs.stanford.edu/people/jcjohns/fast-neural-style/models/vgg16.t7  
 
 #Install Python requirements for training (in requirements.txt)
-RUN pip install h5py==2.6.0 && pip install numpy==1.11.1 && pip install Pillow==3.3.1 && pip install scipy==0.18.0 && pip install six==1.10.0
+#RUN pip install h5py==2.6.0 && pip install numpy==1.11.1 && pip install Pillow==3.3.1 && pip install scipy==0.18.0 && pip install six==1.10.0
 
 # Add neural-style to path
 ENV PATH /app/neural-style:$PATH
