--- a/fast-neural-style-docker/Dockerfile
+++ b/fast-neural-style-docker/Dockerfile
@@ -3,7 +3,7 @@ FROM kaixhin/cuda-torch:8.0
 RUN apt-get -y install python2.7-dev libhdf5-dev
 
 # this step takes ages so let's make a layer from it
-RUN git clone https://github.com/jcjohnson/fast-neural-style.git \
+RUN git clone https://github.com/jcjohnson/fast-neural-style.git 
 #    && luarocks install torch \
 #    && luarocks install nn \
 #    && luarocks install image \
@@ -16,18 +16,12 @@ RUN git clone https://github.com/jcjohnson/fast-neural-style.git \
 #	&& luarocks install hdf5 \
 #    && /root/torch/update.sh
 
-#RUN cd fast-neural-style && bash models/download_style_transfer_models.sh \
-#    && apt-get update \
-#	&& apt-get upgrade \
-#	&& apt-get install wget \
-#   && rm -rf /var/lib/apt/lists/*
-
+RUN apt-get update && apt-get upgrade && apt-get install wget && rm -rf /var/lib/apt/lists/*
 
 #RUN echo 'source /exports.sh' >> /root/.bashrc
-
 #RUN wget -O /root/torch/fast-neural-style/models/vgg16.t7 https://cs.stanford.edu/people/jcjohns/fast-neural-style/models/vgg16.t7
 
-Run pip install -r /root/torch/fast-neural-style/requirements.txt
+RUN pip install -r /root/torch/fast-neural-style/requirements.txt
 
 WORKDIR /root/torch/fast-neural-style
 
