--- a/neural-style-docker/Makefile
+++ b/neural-style-docker/Makefile
@@ -1,7 +1,6 @@
-.PHONY: all build clean build_tests tests clean_tests
+.PHONY: all build clean
 IMGNAME=sbetzin/neural-style
 IMGTAG=latest
-TESTIMGNAME=$(IMGNAME)-tests
 
 build:
 	nvidia-docker build -t $(IMGNAME):$(IMGTAG) .
@@ -9,13 +8,4 @@ build:
 clean:
 	docker rmi $(IMGNAME):$(IMGTAG)
 
-build_tests:
-	nvidia-docker build -t $(TESTIMGNAME) tests
-
-tests:
-	nvidia-docker run --rm -it $(TESTIMGNAME)
-
-clean_tests:
-	docker rmi $(TESTIMGNAME)
-
-all: build build_tests tests
+all: build
