--- a/neural-style-python-docker/Dockerfile
+++ b/neural-style-python-docker/Dockerfile
@@ -1,9 +1,12 @@
 FROM python:3.6.5
 MAINTAINER "Sebastian Betzin, https://github.com/sbetzin"
 
-WORKDIR /usr/src/app
+WORKDIR /app
 COPY requirements.txt ./
 RUN pip install -r requirements.txt
+
+RUN git clone https://github.com/VainF/Neural-Style-Transfer-Gatys.git
+
 
 #COPY ["/src/*.py" ,"/app/"]
 
