--- a/neural-style-python-docker/Dockerfile
+++ b/neural-style-python-docker/Dockerfile
@@ -12,7 +12,7 @@ RUN pip install -r requirements.txt
 RUN git clone https://github.com/VainF/Neural-Style-Transfer-Gatys.git
 
 WORKDIR Neural-Style-Transfer-Gatys
-RUN wget https://neuralstylefiles.blob.core.windows.net/models/vgg19.npy
+RUN wget --progress=bar:force https://neuralstylefiles.blob.core.windows.net/models/vgg19.npy
 
 WORKDIR /app
 #COPY ["/src/*.py" ,"/app/"]
