changed to base ubuntu image

--- a/neural-style-python-docker/Dockerfile
+++ b/neural-style-python-docker/Dockerfile
@@ -1,9 +1,9 @@
 FROM ubuntu:16.04
-RUN apt-get update
-RUN apt-get install -y software-properties-common nano
-
-FROM python:3.6.5
 MAINTAINER "Sebastian Betzin, https://github.com/sbetzin"
+
+RUN apt-get update
+RUN apt-get install -y software-properties-common python-software-properties nano
+RUN apt-get install python3.6
 
 WORKDIR /app
 COPY requirements.txt ./
