--- a/neural-style-python-docker/Dockerfile
+++ b/neural-style-python-docker/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER "Sebastian Betzin, https://github.com/sbetzin"
 
 RUN apt-get update
 RUN apt-get install -y software-properties-common python-software-properties nano
-RUN apt-get install python3.6
+#RUN apt-get install python3.6
 
 WORKDIR /app
 COPY requirements.txt ./
