--- a/neural-style-python-docker/Dockerfile
+++ b/neural-style-python-docker/Dockerfile
@@ -7,17 +7,16 @@ RUN apt-get install -y software-properties-common python-software-properties nan
 
 WORKDIR /app
 COPY requirements.txt ./
-RUN pip install -r requirements.txt
+#RUN pip install -r requirements.txt
 
 RUN git clone https://github.com/VainF/Neural-Style-Transfer-Gatys.git
 
 WORKDIR Neural-Style-Transfer-Gatys
-RUN wget --progress=bar:force https://neuralstylefiles.blob.core.windows.net/models/vgg19.npy
+#RUN wget --progress=bar:force https://neuralstylefiles.blob.core.windows.net/models/vgg19.npy
 
 WORKDIR /app
 #COPY ["/src/*.py" ,"/app/"]
 
-#ENTRYPOINT ["python", "/app/queueclient.py"]
 ENTRYPOINT ["/bin/bash"]
 
 
