--- a/neural-style-python-docker/Dockerfile
+++ b/neural-style-python-docker/Dockerfile
@@ -1,10 +1,10 @@
-FROM ubuntu:16.04
+FROM ubuntu:16.10
 MAINTAINER "Sebastian Betzin, https://github.com/sbetzin"
 
 RUN apt-get update
-RUN apt-get install -y software-properties-common python-software-properties nano wget git
-RUN apt-get install build-essential libpq-dev libssl-dev openssl libffi-dev zlib1g-dev
-RUN apt-get install python3-pip python3-dev
+RUN apt-get install -y software-properties-common nano wget git sudo
+#RUN apt-get install build-essential libpq-dev libssl-dev openssl libffi-dev zlib1g-dev python-software-properties
+#RUN apt-get install python3-pip python3-dev
 #RUN apt-get install python3.6
 
 WORKDIR /app
