--- a/neural-style-python-docker/Dockerfile
+++ b/neural-style-python-docker/Dockerfile
@@ -1,8 +1,7 @@
 FROM ubuntu:18.04
 MAINTAINER "Sebastian Betzin, https://github.com/sbetzin"
 
-RUN apt-get update && apt-get upgrade
-#RUN apt-get install -y software-properties-common nano wget git sudo
+RUN apt-get update && apt-get upgrade && apt-get install -y software-properties-common nano wget git sudo
 #RUN apt-get install build-essential libpq-dev libssl-dev openssl libffi-dev zlib1g-dev python-software-properties
 #RUN apt-get install python3-pip python3-dev
 #RUN apt-get install python3.6
