--- a/neural-style-python-docker/Dockerfile
+++ b/neural-style-python-docker/Dockerfile
@@ -1,12 +1,13 @@
-FROM ubuntu:18.04
+FROM tensorflow/tensorflow:latest-gpu
 MAINTAINER "Sebastian Betzin, https://github.com/sbetzin"
 
-RUN apt-get update && apt-get -y upgrade && apt-get install -y software-properties-common nano wget git sudo
-RUN apt-get install -y python3-pip
+#RUN apt-get update && apt-get -y upgrade && apt-get install -y software-properties-common nano wget git sudo
+#RUN apt-get install -y python3-pip
+#RUN apt-get install -y python3.5-tk
 
 WORKDIR /app
-COPY requirements.txt ./
-RUN pip3 install -r requirements.txt
+#COPY requirements.txt ./
+#RUN pip3 install -r requirements.txt
 RUN git clone https://github.com/VainF/Neural-Style-Transfer-Gatys.git
 
 WORKDIR Neural-Style-Transfer-Gatys
