update docker for other py file

--- a/neural-style-python-docker/Dockerfile
+++ b/neural-style-python-docker/Dockerfile
@@ -1,24 +1,22 @@
 FROM tensorflow/tensorflow:latest-gpu
 MAINTAINER "Sebastian Betzin, https://github.com/sbetzin"
 
-#RUN apt-get update && apt-get -y upgrade && apt-get install -y software-properties-common nano wget git sudo
-#RUN apt-get install -y python3-pip
-#RUN apt-get install -y python3.5-tk
-
 RUN apt-get update && apt-get -y upgrade && apt-get install -y nano wget git sudo
 
 WORKDIR /app
-#COPY requirements.txt ./
-#RUN pip3 install -r requirements.txt
+
+RUN pip install --upgrade pip
+RUN pip install tensorflow opencv-python-headless
+
+
 RUN git clone https://github.com/cysmith/neural-style-tf.git
 
-WORKDIR neural-style-tf
-RUN wget --progress=bar:force https://neuralstylefiles.blob.core.windows.net/models/vgg19.npy
+WORKDIR /app/neural-style-tf
+RUN wget --progress=bar:force https://neuralstylefiles.blob.core.windows.net/models/imagenet-vgg-verydeep-19.mat
 
-WORKDIR /app
 #COPY ["/src/*.py" ,"/app/"]
 
-ENTRYPOINT ["/bin/bash"]
+ENTRYPOINT ["/bin/bash", "stylize_image.sh"]
 
 
 
