changed queueclient to work with tensorflow implementation of neural style

--- a/neural-style-python-docker/Dockerfile
+++ b/neural-style-python-docker/Dockerfile
@@ -2,17 +2,11 @@ FROM tensorflow/tensorflow:latest-gpu
 MAINTAINER "Sebastian Betzin, https://github.com/sbetzin"
 
 RUN apt-get update && apt-get -y upgrade && apt-get install -y nano wget git sudo
+RUN pip install --upgrade pip && pip install opencv-python-headless
 
 WORKDIR /app
-
-RUN pip install --upgrade pip
-RUN pip install opencv-python-headless
-
-RUN git clone https://github.com/cysmith/neural-style-tf.git
-
-WORKDIR /app/neural-style-tf
 RUN wget --progress=bar:force https://neuralstylefiles.blob.core.windows.net/models/imagenet-vgg-verydeep-19.mat
 
 #COPY ["/src/*.py" ,"/app/"]
 
-ENTRYPOINT ["python", "neural_style.py"]
+ENTRYPOINT ["python", "/app/queueclient.py"]
