added start, stop and restart

--- a/neural-style-python-docker/Makefile
+++ b/neural-style-python-docker/Makefile
@@ -1,4 +1,4 @@
-.PHONY: all build clean
+.PHONY: all build clean start stop restart
 IMGNAME=sbetzin/neural-style-python
 IMGTAG=latest
 
@@ -8,4 +8,11 @@ build:
 clean:
 	docker rmi $(IMGNAME):$(IMGTAG)
 
+start:
+	nvidia-docker run -d -e AzureStorageConnectionString --name neural-style-python --restart=unless-stopped $(IMGNAME)
+	
+stop:
+	nvidia-docker stop $(docker ps -q --filter ancestor=$(IMGNAME) )
+
+restart: stop start
 all: build
