--- a/console-client/src/NeuralStyle.ConsoleClient/NeuralStyle.ConsoleClient.csproj
+++ b/console-client/src/NeuralStyle.ConsoleClient/NeuralStyle.ConsoleClient.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ExifLib" Version="1.7.0" />
+    <PackageReference Include="System.Drawing.Common" Version="4.5.0" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.2.0" />
   </ItemGroup>
