added console option

--- a/docker/neural-style-tensorflow-docker/Makefile
+++ b/docker/neural-style-tensorflow-docker/Makefile
@@ -1,4 +1,4 @@
-.PHONY: all build clean start stop restart logs pull
+.PHONY: all build clean start stop restart logs pull console
 IMGNAME=sbetzin/neural-style-tensorflow
 IMGTAG=latest
 
@@ -20,6 +20,9 @@ pull:
 	
 logs:
 	nvidia-docker logs $(shell docker ps -q --filter ancestor=sbetzin/neural-style-tensorflow)
+	
+console:
+	nvidia-docker run --rm -it AzureStorageConnectionString --name neural-style-python-console --entrypoint /bin/bash sbetzin/neural-style $(IMGNAME)
 	
 restart: stop start
 all: build
