added console commands

--- a/docker/neural-style-tensorflow-docker/Makefile
+++ b/docker/neural-style-tensorflow-docker/Makefile
@@ -1,4 +1,4 @@
-.PHONY: all build clean start stop restart logs pull console
+.PHONY: all build clean start stop restart logs pull console-start console-stop console-logs
 IMGNAME=sbetzin/neural-style-tensorflow
 IMGTAG=latest
 
@@ -12,17 +12,26 @@ start:
 	nvidia-docker run -d -e AzureStorageConnectionString -e AzureStorageQueueName --name neural-style-tensorflow --restart=unless-stopped $(IMGNAME)
 	
 stop:
-	nvidia-docker stop $(shell docker ps -q --filter ancestor=sbetzin/neural-style-tensorflow)
+	nvidia-docker stop $(shell docker ps -q --filter "name=neural-style-tensorflow")
 	docker container prune --force
 
 pull:
 	docker pull $(IMGNAME):$(IMGTAG)
 	
 logs:
-	nvidia-docker logs $(shell docker ps -q --filter "name=neural-style-tensorflow*")
+	nvidia-docker logs $(shell docker ps -q --filter "name=neural-style-tensorflow")
 	
-console:
+console-start:
 	nvidia-docker run --rm -it -e AzureStorageConnectionString -e AzureStorageQueueName --name neural-style-tensorflow-console --entrypoint /bin/bash $(IMGNAME)
+
+console-stop:
+	nvidia-docker stop $(shell docker ps -q --filter "name=neural-style-tensorflow-console")
+	docker container prune --force
 	
+console-logs:
+	nvidia-docker logs $(shell docker ps -q --filter "name=neural-style-tensorflow-console")
+
+console-restart: console-stop console-start
+
 restart: stop start
 all: build
