--- a/docker/neural-style-torch-docker/Dockerfile
+++ b/docker/neural-style-torch-docker/Dockerfile
@@ -58,6 +58,10 @@ WORKDIR /app/fast-neural-style
 RUN wget --progress=bar:force https://neuralstylefiles.blob.core.windows.net/models/vgg16.t7
 RUN wget --progress=bar:force https://neuralstylefiles.blob.core.windows.net/models/vgg19.t7
 
+# Update Torch
+WORKDIR /root/torch
+RUN sudo bash update.sh
+
 # Add neural-style to path
 ENV PATH /app/neural-style:$PATH
 ENV PATH /app/fast-neural-style:$PATH
